--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "node-t-tracker",
-  "version": "0.4.6",
+  "version": "0.5.0",
   "description": "API for torrent-trackers",
   "main": "api.js",
   "scripts": {
@@ -28,7 +28,6 @@
     "cheerio": "^1.0.0-rc.1",
     "iconv": "^2.3.0",
     "install": "^0.10.1",
-    "request": "^2.81.0",
-    "socks": "^1.1.10"
+    "request": "^2.81.0"
   }
 }
