--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "iconv": "^2.3.0"
   },
   "devDependencies": {
-    "chai": "4.2.0"
+    "chai": "4.2.0",
+    "mocha-isolation": "0.1.5"
   }
 }
